Agregada entidad Categoria
